--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,12 +12,12 @@
 	</head>
 	<body class="container">
 		<nav class="navbar navbar-inverse" role="navigation">
-			<div class="navbar-header">
+			<!-- <div class="navbar-header">
 				<a class="navbar-brand" ui-sref="home">HOME</a>
-			</div>
+			</div>  -->
 			
 			<ul class="nav navbar-nav">
-				<li><a ui-sref="airport">Airport</a>
+				<!-- <li><a ui-sref="airport">Airport</a> -->
 				<li><a ui-sref="airports">Airports</a>
 				<li><a ui-sref="active">Active Airports</a>
 				<li><a ui-sref="reports">Reports</a>
@@ -39,7 +39,6 @@
 	    <script src = "controllers/airportsController.js"></script>
 	    <script src = "controllers/activeController.js"></script>
 	    <script src = "controllers/reportsController.js"></script>
-	    <script src = "controllers/limitController.js"></script>
 	    <script src = "controllers/translateController.js"></script>
 	    
 	    <script src = "services/dataStoreService.js"></script>
